--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0444.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0444.html
@@ -388,9 +388,9 @@
             <ins class="alt" title="nlp 1.00">τις</ins>
           </span>
         </span>
-        <span id="w_75" class="ocr_word" title="bbox 1747 948 1912 999" lang="grc">
+        <span id="w_75_0" class="ocr_word" title="bbox 1747 948 1912 999">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐνταυ-</ins>
+            <ins class="alt" title="nlp 2.00">ἐνταυθοῖ</ins>
           </span>
         </span>
       </span>
@@ -398,11 +398,6 @@
         <span id="w_76" class="ocr_word" title="bbox 152 1044 195 1077">
           <span class="alternatives">
             <ins title="nlp 2.00">10</ins>
-          </span>
-        </span>
-        <span id="w_77" class="ocr_word" title="bbox 217 1033 315 1079" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">θοῖ</ins>
           </span>
         </span>
         <span id="w_78" class="ocr_word" title="bbox 341 1028 575 1095" lang="grc">
