--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0445.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0445.html
@@ -268,7 +268,7 @@
         </span>
         <span id="w_48_1" class="ocr_word" title="bbox 1658 677 1802 729">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">5</ins>
           </span>
         </span>
       </span>
@@ -468,7 +468,7 @@
         </span>
         <span id="w_88_1" class="ocr_word" title="bbox 1698 1069 1802 1100">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">10</ins>
           </span>
         </span>
       </span>
