--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0621.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0621.html
@@ -422,17 +422,22 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 219 1103 970 1160">
-        <span id="w_75" class="ocr_word" title="bbox 219 1103 303 1156">
+        <span id="w_75_0" class="ocr_word" title="bbox 219 1103 303 1156">
           <span class="alternatives">
-            <ins title="nlp 2.00">II9,</ins>
+            <ins class="alt" title="nlp 2.00">119,</ins>
           </span>
         </span>
-        <span id="w_76_0" class="ocr_word" title="bbox 322 1107 499 1155">
+        <span id="w_75_1" class="ocr_word" title="bbox 219 1103 303 1156">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">17—18,</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
-        <span id="w_76_1" class="ocr_word" title="bbox 322 1107 499 1155">
+        <span id="w_76_0_0" class="ocr_word" title="bbox 322 1107 499 1155">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">17–18,</ins>
+          </span>
+        </span>
+        <span id="w_76_0_1" class="ocr_word" title="bbox 322 1107 499 1155">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -450,16 +455,6 @@
         <span id="w_79" class="ocr_word" title="bbox 674 1109 736 1149">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">10.</ins>
-          </span>
-        </span>
-        <span id="w_80" class="ocr_word" title="bbox 750 1110 816 1158">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">60,</ins>
-          </span>
-        </span>
-        <span id="w_81" class="ocr_word" title="bbox 832 1110 856 1147">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">2</ins>
           </span>
         </span>
       </span>
@@ -617,12 +612,12 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 167 1497 814 1550">
-        <span id="w_114_0" class="ocr_word" title="bbox 167 1497 532 1542">
+        <span id="w_114_0_0" class="ocr_word" title="bbox 167 1497 532 1542">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">Commermoëri</ins>
           </span>
         </span>
-        <span id="w_114_1" class="ocr_word" title="bbox 167 1497 532 1542">
+        <span id="w_114_0_1" class="ocr_word" title="bbox 167 1497 532 1542">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -631,11 +626,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">II</ins>
             <del title="nlp 0.90">II</del>
-          </span>
-        </span>
-        <span id="w_116" class="ocr_word" title="bbox 636 1503 730 1550">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">219,</ins>
           </span>
         </span>
       </span>
@@ -1634,12 +1624,7 @@
         </span>
         <span id="w_303" class="ocr_word" title="bbox 1391 880 1722 925">
           <span class="alternatives">
-            <ins title="nlp 2.00">Monomachus</ins>
-          </span>
-        </span>
-        <span id="w_304" class="ocr_word" title="bbox 1732 882 1844 937">
-          <span class="alternatives">
-            <ins title="nlp 2.00">imp.</ins>
+            <ins title="nlp 2.00">Monomachusimp.</ins>
           </span>
         </span>
       </span>
