--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0446.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0446.html
@@ -779,9 +779,14 @@
             <ins class="alt" title="nlp 1.00">ἐκεῖνος</ins>
           </span>
         </span>
-        <span id="w_152" class="ocr_word" title="bbox 969 1595 1076 1662" lang="grc">
+        <span id="w_152_0" class="ocr_word" title="bbox 969 1595 1076 1662">
           <span class="alternatives">
-            <ins title="nlp 2.00">καὶ</ins>
+            <ins class="alt" title="nlp 2.00">(καὶ</ins>
+          </span>
+        </span>
+        <span id="w_152_1" class="ocr_word" title="bbox 969 1595 1076 1662">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_153" class="ocr_word" title="bbox 1122 1615 1204 1661" lang="grc">
@@ -797,11 +802,6 @@
         <span id="w_155" class="ocr_word" title="bbox 1459 1616 1547 1662" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῆς</ins>
-          </span>
-        </span>
-        <span id="w_156" class="ocr_word" title="bbox 1587 1602 1905 1662" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">περιαυτολογίας</ins>
           </span>
         </span>
       </span>
@@ -920,9 +920,14 @@
             <ins class="alt" title="nlp 1.00">τὰ</ins>
           </span>
         </span>
-        <span id="w_183" class="ocr_word" title="bbox 1116 1849 1207 1879" lang="grc">
+        <span id="w_183_0" class="ocr_word" title="bbox 1116 1849 1207 1879">
           <span class="alternatives">
-            <ins title="nlp 2.00">κατ᾿ κατόπιν</ins>
+            <ins class="alt" title="nlp 2.00">κατ'</ins>
+          </span>
+        </span>
+        <span id="w_183_1" class="ocr_word" title="bbox 1116 1849 1207 1879">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">αὐτὸν</ins>
           </span>
         </span>
         <span id="w_184" class="ocr_word" title="bbox 1446 1831 1660 1882" lang="grc">
@@ -1469,9 +1474,9 @@
             <ins class="alt" title="nlp 1.00">ἑσπέρα</ins>
           </span>
         </span>
-        <span id="w_289" class="ocr_word" title="bbox 1688 2775 1906 2829" lang="grc">
+        <span id="w_289_0" class="ocr_word" title="bbox 1688 2775 1906 2829">
           <span class="alternatives">
-            <ins title="nlp 2.00">προσαν-</ins>
+            <ins class="alt" title="nlp 2.00">προσανπολλῶν?</ins>
           </span>
         </span>
       </span>
@@ -1479,11 +1484,6 @@
         <span id="w_290" class="ocr_word" title="bbox 309 2931 362 2970">
           <span class="alternatives">
             <ins title="nlp 2.00">21</ins>
-          </span>
-        </span>
-        <span id="w_291" class="ocr_word" title="bbox 393 2928 609 2971" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">πολλῶν?</ins>
           </span>
         </span>
         <span id="w_292" class="ocr_word" title="bbox 729 2931 783 2971">
