--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0447.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0447.html
@@ -414,9 +414,14 @@
             <ins class="alt" title="nlp 1.00">ἐπιβουλεύοντας,</ins>
           </span>
         </span>
-        <span id="w_80" class="ocr_word" title="bbox 1072 952 1182 1021" lang="grc">
+        <span id="w_80_0" class="ocr_word" title="bbox 1072 952 1182 1021">
           <span class="alternatives">
-            <ins title="nlp 2.00">τίς]</ins>
+            <ins class="alt" title="nlp 2.00">[τίς]</ins>
+          </span>
+        </span>
+        <span id="w_80_1" class="ocr_word" title="bbox 1072 952 1182 1021">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_81" class="ocr_word" title="bbox 1213 956 1348 1015" lang="grc">
@@ -432,11 +437,6 @@
         <span id="w_83" class="ocr_word" title="bbox 1504 974 1558 1004" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸ</ins>
-          </span>
-        </span>
-        <span id="w_84" class="ocr_word" title="bbox 1582 954 1835 1022" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">συμφέρον</ins>
           </span>
         </span>
       </span>
@@ -1443,9 +1443,14 @@
             <ins class="alt" title="nlp 1.00">ἄγουσι</ins>
           </span>
         </span>
-        <span id="w_283" class="ocr_word" title="bbox 1252 2656 1355 2722" lang="grc">
+        <span id="w_283_0" class="ocr_word" title="bbox 1252 2656 1355 2722">
           <span class="alternatives">
-            <ins title="nlp 2.00">καὶ</ins>
+            <ins class="alt" title="nlp 2.00">(καὶ</ins>
+          </span>
+        </span>
+        <span id="w_283_1" class="ocr_word" title="bbox 1252 2656 1355 2722">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_284" class="ocr_word" title="bbox 1401 2663 1577 2706" lang="grc">
@@ -1456,11 +1461,6 @@
         <span id="w_285" class="ocr_word" title="bbox 1619 2649 1722 2704" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οἶδε</ins>
-          </span>
-        </span>
-        <span id="w_286" class="ocr_word" title="bbox 1760 2671 1846 2701" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸν</ins>
           </span>
         </span>
       </span>
