--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0448.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0448.html
@@ -132,9 +132,14 @@
             <ins class="alt" title="nlp 1.00">γεγονυῖαν</ins>
           </span>
         </span>
-        <span id="w_24" class="ocr_word" title="bbox 713 489 859 554" lang="grc">
+        <span id="w_24_0" class="ocr_word" title="bbox 713 489 859 554">
           <span class="alternatives">
-            <ins title="nlp 2.00">κατὰ</ins>
+            <ins class="alt" title="nlp 2.00">(κατὰ</ins>
+          </span>
+        </span>
+        <span id="w_24_1" class="ocr_word" title="bbox 713 489 859 554">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_25" class="ocr_word" title="bbox 915 510 1010 557" lang="grc">
@@ -160,11 +165,6 @@
         <span id="w_29" class="ocr_word" title="bbox 1659 507 1818 553" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὁρμὴν</ins>
-          </span>
-        </span>
-        <span id="w_30" class="ocr_word" title="bbox 1854 483 1880 536" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὁ</ins>
           </span>
         </span>
       </span>
@@ -446,9 +446,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 114 1028 1883 1102">
-        <span id="w_86" class="ocr_word" title="bbox 114 1055 156 1088" lang="grc">
+        <span id="w_86_0" class="ocr_word" title="bbox 114 1055 156 1088">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ἄιδος· </ins>
+            <ins class="alt" title="nlp 2.00">10</ins>
+          </span>
+        </span>
+        <span id="w_86_1" class="ocr_word" title="bbox 114 1055 156 1088">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">Ἄιδος·</ins>
           </span>
         </span>
         <span id="w_87" class="ocr_word" title="bbox 403 1033 522 1086" lang="grc">
@@ -1171,7 +1176,7 @@
         </span>
         <span id="w_225_1" class="ocr_word" title="bbox 1789 2135 1812 2166">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">B</ins>
           </span>
         </span>
       </span>
