--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0449.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0449.html
@@ -503,7 +503,7 @@
         </span>
         <span id="w_95_1" class="ocr_word" title="bbox 1547 1056 1817 1108">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">10</ins>
           </span>
         </span>
       </span>
