--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0266.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0266.html
@@ -69,16 +69,11 @@
         </span>
         <span id="w_11" class="ocr_word" title="bbox 1747 340 1886 409" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">στρά-</ins>
+            <ins title="nlp 2.00">στράτευμα</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 206 416 1889 490">
-        <span id="w_12" class="ocr_word" title="bbox 206 444 358 490" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τευμα</ins>
-          </span>
-        </span>
         <span id="w_13" class="ocr_word" title="bbox 405 423 600 483" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐπέταξε</ins>
@@ -514,16 +509,11 @@
         </span>
         <span id="w_96" class="ocr_word" title="bbox 1793 1118 1892 1163" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Νι-</ins>
+            <ins title="nlp 2.00">Νικηφόρος</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 205 1190 1892 1262">
-        <span id="w_97" class="ocr_word" title="bbox 205 1192 424 1259" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κηφόρος</ins>
-          </span>
-        </span>
         <span id="w_98" class="ocr_word" title="bbox 464 1198 653 1260" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">Καῖσαρ</ins>
@@ -764,16 +754,11 @@
         </span>
         <span id="w_146" class="ocr_word" title="bbox 1702 1522 1893 1571" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">παραγ-</ins>
+            <ins title="nlp 2.00">παραγγείλας</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 208 1581 1895 1650">
-        <span id="w_147" class="ocr_word" title="bbox 208 1582 370 1648" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γείλας</ins>
-          </span>
-        </span>
         <span id="w_148" class="ocr_word" title="bbox 407 1581 492 1631" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -1068,16 +1053,11 @@
         </span>
         <span id="w_205" class="ocr_word" title="bbox 1757 2048 1891 2097" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἵστα-</ins>
+            <ins title="nlp 2.00">ἵστασθαι</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 212 2124 1896 2188">
-        <span id="w_206" class="ocr_word" title="bbox 212 2126 335 2171" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σθαι</ins>
-          </span>
-        </span>
         <span id="w_207" class="ocr_word" title="bbox 381 2142 464 2172" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -1157,16 +1137,11 @@
         </span>
         <span id="w_222" class="ocr_word" title="bbox 1803 2199 1894 2267" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἁρ-</ins>
+            <ins title="nlp 2.00">ἀρμαμάξαις</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 210 2274 1895 2349">
-        <span id="w_223" class="ocr_word" title="bbox 210 2277 452 2341" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μαμάξαις</ins>
-          </span>
-        </span>
         <span id="w_224" class="ocr_word" title="bbox 491 2298 543 2328" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸ</ins>
