--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0450.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0450.html
@@ -37,9 +37,14 @@
             <ins class="alt" title="nlp 1.00">Βασίλειον</ins>
           </span>
         </span>
-        <span id="w_5" class="ocr_word" title="bbox 655 343 808 416" lang="grc">
+        <span id="w_5_0" class="ocr_word" title="bbox 655 343 808 416">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀνὴρ</ins>
+            <ins class="alt" title="nlp 2.00">(ἀνὴρ</ins>
+          </span>
+        </span>
+        <span id="w_5_1" class="ocr_word" title="bbox 655 343 808 416">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_6" class="ocr_word" title="bbox 847 348 901 395" lang="grc">
@@ -70,11 +75,6 @@
         <span id="w_11" class="ocr_word" title="bbox 1621 365 1705 396" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸν</ins>
-          </span>
-        </span>
-        <span id="w_12" class="ocr_word" title="bbox 1743 338 1908 418" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">αὐτοκράτορα</ins>
           </span>
         </span>
       </span>
@@ -178,9 +178,14 @@
             <ins class="alt" title="nlp 1.00">κατέλυε</ins>
           </span>
         </span>
-        <span id="w_34" class="ocr_word" title="bbox 1086 577 1306 641" lang="grc">
+        <span id="w_34_0" class="ocr_word" title="bbox 1086 577 1306 641">
           <span class="alternatives">
-            <ins title="nlp 2.00">τέμενος</ins>
+            <ins class="alt" title="nlp 2.00">(τέμενος</ins>
+          </span>
+        </span>
+        <span id="w_34_1" class="ocr_word" title="bbox 1086 577 1306 641">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_35" class="ocr_word" title="bbox 1337 578 1389 628" lang="grc">
@@ -191,11 +196,6 @@
         <span id="w_36" class="ocr_word" title="bbox 1415 598 1559 629" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῦτο</ins>
-          </span>
-        </span>
-        <span id="w_37" class="ocr_word" title="bbox 1585 597 1644 630" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἐπ᾿ ὀνόματι</ins>
           </span>
         </span>
       </span>
@@ -1209,19 +1209,19 @@
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_234" class="ocr_word" title="bbox 1086 2362 1396 2431" lang="grc">
+        <span id="w_234_0" class="ocr_word" title="bbox 1086 2362 1396 2431">
           <span class="alternatives">
-            <ins title="nlp 2.00">Βαίμούντου</ins>
+            <ins class="alt" title="nlp 2.00">Βαϊμούντου</ins>
+          </span>
+        </span>
+        <span id="w_234_1" class="ocr_word" title="bbox 1086 2362 1396 2431">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_235" class="ocr_word" title="bbox 1442 2368 1751 2433" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">κατεπείγειν</ins>
-          </span>
-        </span>
-        <span id="w_236" class="ocr_word" title="bbox 1788 2368 1898 2417" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">διαπεραίωσιν,</ins>
           </span>
         </span>
       </span>
