--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0628.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0628.html
@@ -1895,11 +1895,6 @@
             <ins class="alt" title="nlp 2.00">etc.</ins>
           </span>
         </span>
-        <span id="w_354_1" class="ocr_word" title="bbox 1095 1401 1181 1443">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_355" class="ocr_word" title="bbox 1212 1405 1308 1453">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">202,</ins>
@@ -1915,9 +1910,14 @@
             <ins title="nlp 2.00">opp.</ins>
           </span>
         </span>
-        <span id="w_358" class="ocr_word" title="bbox 1515 1399 1702 1443">
+        <span id="w_358_0" class="ocr_word" title="bbox 1515 1399 1702 1443">
           <span class="alternatives">
-            <ins title="nlp 2.00">Francis</ins>
+            <ins class="alt" title="nlp 2.00">Francis</ins>
+          </span>
+        </span>
+        <span id="w_358_1" class="ocr_word" title="bbox 1515 1399 1702 1443">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">Longibadis</ins>
           </span>
         </span>
       </span>
