--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0639.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0639.html
@@ -1586,14 +1586,14 @@
             <ins title="nlp 2.00">Trimus</ins>
           </span>
         </span>
-        <span id="w_288" class="ocr_word" title="bbox 1341 958 1690 1016">
+        <span id="w_288_0" class="ocr_word" title="bbox 1341 958 1690 1016">
           <span class="alternatives">
-            <ins title="nlp 2.00">(Trimontium0</ins>
+            <ins class="alt" title="nlp 2.00">(Trimontium)</ins>
           </span>
         </span>
-        <span id="w_289" class="ocr_word" title="bbox 1758 961 1883 1014">
+        <span id="w_288_1" class="ocr_word" title="bbox 1341 958 1690 1016">
           <span class="alternatives">
-            <ins title="nlp 2.00">urbs,</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -2337,14 +2337,14 @@
             <ins class="alt" title="nlp 1.00">3.</ins>
           </span>
         </span>
-        <span id="w_429" class="ocr_word" title="bbox 1510 2297 1782 2339">
+        <span id="w_429_0" class="ocr_word" title="bbox 1510 2297 1782 2339">
           <span class="alternatives">
-            <ins title="nlp 2.00">ëmundo</ins>
+            <ins class="alt" title="nlp 2.00">Boëmundo</ins>
           </span>
         </span>
-        <span id="w_430" class="ocr_word" title="bbox 1806 2297 1883 2339">
+        <span id="w_429_1" class="ocr_word" title="bbox 1510 2297 1782 2339">
           <span class="alternatives">
-            <ins title="nlp 2.00">adversus</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
