--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0268.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0268.html
@@ -485,11 +485,6 @@
             <ins class="alt" title="nlp 2.00">ἤδη</ins>
           </span>
         </span>
-        <span id="w_90_1" class="ocr_word" title="bbox 1234 1021 1334 1085">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_91" class="ocr_word" title="bbox 1374 1021 1753 1086" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">διεσπάσθησαν</ins>
@@ -1254,16 +1249,11 @@
         </span>
         <span id="w_241" class="ocr_word" title="bbox 1831 2276 1912 2323" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σή-</ins>
+            <ins title="nlp 2.00">σήμερον</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 231 2339 1914 2405">
-        <span id="w_242" class="ocr_word" title="bbox 231 2353 378 2400" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μερον</ins>
-          </span>
-        </span>
         <span id="w_243" class="ocr_word" title="bbox 423 2342 760 2401" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">γεννηθέντας</ins>
@@ -1521,9 +1511,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 346 2828 1906 2891">
-        <span id="w_291" class="ocr_word" title="bbox 346 2828 393 2866">
+        <span id="w_291_0" class="ocr_word" title="bbox 346 2828 393 2866">
           <span class="alternatives">
-            <ins title="nlp 2.00">11</ins>
+            <ins class="alt" title="nlp 2.00">11</ins>
+          </span>
+        </span>
+        <span id="w_291_1" class="ocr_word" title="bbox 346 2828 393 2866">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">φησιν</ins>
           </span>
         </span>
         <span id="w_293" class="ocr_word" title="bbox 608 2831 670 2872">
