--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0640.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0640.html
@@ -102,12 +102,12 @@
             <ins class="alt" title="nlp 1.00">248,</ins>
           </span>
         </span>
-        <span id="w_18_0" class="ocr_word" title="bbox 676 390 859 437">
+        <span id="w_18_0_0" class="ocr_word" title="bbox 676 390 859 437">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">1—253,</ins>
+            <ins class="alt" title="nlp 2.00">1–263,</ins>
           </span>
         </span>
-        <span id="w_18_1" class="ocr_word" title="bbox 676 390 859 437">
+        <span id="w_18_0_1" class="ocr_word" title="bbox 676 390 859 437">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -1804,19 +1804,19 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 1046 2012 1846 2069">
-        <span id="w_330" class="ocr_word" title="bbox 1046 2012 1158 2055">
+        <span id="w_330_0" class="ocr_word" title="bbox 1046 2012 1158 2055">
           <span class="alternatives">
-            <ins title="nlp 2.00">ës</ins>
+            <ins class="alt" title="nlp 2.00">Zoës</ins>
+          </span>
+        </span>
+        <span id="w_330_1" class="ocr_word" title="bbox 1046 2012 1158 2055">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_331" class="ocr_word" title="bbox 1188 2012 1500 2068">
           <span class="alternatives">
             <ins title="nlp 2.00">imperatricis</ins>
-          </span>
-        </span>
-        <span id="w_332" class="ocr_word" title="bbox 1530 2013 1846 2069">
-          <span class="alternatives">
-            <ins title="nlp 2.00">sarcophagus</ins>
           </span>
         </span>
       </span>
@@ -1848,19 +1848,19 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 1044 2124 1849 2181">
-        <span id="w_338" class="ocr_word" title="bbox 1044 2125 1133 2167">
+        <span id="w_338_0" class="ocr_word" title="bbox 1044 2125 1133 2167">
           <span class="alternatives">
-            <ins title="nlp 2.00">ë</ins>
+            <ins class="alt" title="nlp 2.00">Zoë</ins>
+          </span>
+        </span>
+        <span id="w_338_1" class="ocr_word" title="bbox 1044 2125 1133 2167">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_339" class="ocr_word" title="bbox 1172 2125 1576 2181">
           <span class="alternatives">
             <ins title="nlp 2.00">porphyrogenita</ins>
-          </span>
-        </span>
-        <span id="w_340" class="ocr_word" title="bbox 1613 2124 1849 2169">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Eudociae</ins>
           </span>
         </span>
       </span>
