--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0269.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0269.html
@@ -159,16 +159,11 @@
         </span>
         <span id="w_29" class="ocr_word" title="bbox 1660 449 1784 500" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">συμ-</ins>
+            <ins title="nlp 2.00">συμβέβηκεν.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 92 508 1786 576">
-        <span id="w_30" class="ocr_word" title="bbox 92 508 322 576" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">βέβηκεν.</ins>
-          </span>
-        </span>
         <span id="w_31" class="ocr_word" title="bbox 385 528 456 568" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εἷς</ins>
