--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0271.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0271.html
@@ -144,16 +144,11 @@
         </span>
         <span id="w_24" class="ocr_word" title="bbox 1669 472 1782 502" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ταύ-</ins>
+            <ins title="nlp 2.00">ταύτην</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 100 522 1784 595">
-        <span id="w_25" class="ocr_word" title="bbox 100 545 188 589" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">την</ins>
-          </span>
-        </span>
         <span id="w_26" class="ocr_word" title="bbox 227 522 539 591" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὠνήσασθαι.</ins>
@@ -557,16 +552,11 @@
         </span>
         <span id="w_104" class="ocr_word" title="bbox 1669 1161 1789 1197" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἔσω-</ins>
+            <ins title="nlp 2.00">ἔσωσαν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 104 1222 1790 1291">
-        <span id="w_105" class="ocr_word" title="bbox 104 1238 198 1272" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σαν</ins>
-          </span>
-        </span>
         <span id="w_106" class="ocr_word" title="bbox 246 1222 590 1290" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">κρυπτόμενοι.</ins>
@@ -1086,16 +1076,11 @@
         </span>
         <span id="w_207" class="ocr_word" title="bbox 1619 2073 1796 2142" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">βουλό-</ins>
+            <ins title="nlp 2.00">βουλόμενοι</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 111 2151 1861 2220">
-        <span id="w_208" class="ocr_word" title="bbox 111 2172 248 2219" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μενοι</ins>
-          </span>
-        </span>
         <span id="w_209" class="ocr_word" title="bbox 285 2151 630 2219" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀπεμπολῆσαι</ins>
@@ -1269,16 +1254,11 @@
         </span>
         <span id="w_242" class="ocr_word" title="bbox 1559 2386 1800 2452" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐνδιατρί-</ins>
+            <ins title="nlp 2.00">ἐνδιατρίβων</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 116 2463 1798 2532">
-        <span id="w_243" class="ocr_word" title="bbox 116 2469 222 2532" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">βων</ins>
-          </span>
-        </span>
         <span id="w_244" class="ocr_word" title="bbox 259 2485 346 2530" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῆς</ins>
