--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0272.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0272.html
@@ -512,12 +512,12 @@
             <ins class="alt" title="nlp 1.00">πᾶσαν</ins>
           </span>
         </span>
-        <span id="w_97_0" class="ocr_word" title="bbox 1670 1076 1887 1142">
+        <span id="w_97_0_0" class="ocr_word" title="bbox 1670 1076 1887 1142">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">βασιλεύς.</ins>
+            <ins class="alt" title="nlp 2.00">διαμερίσασθε</ins>
           </span>
         </span>
-        <span id="w_97_1" class="ocr_word" title="bbox 1670 1076 1887 1142">
+        <span id="w_97_0_1" class="ocr_word" title="bbox 1670 1076 1887 1142">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
