--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0273.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0273.html
@@ -881,11 +881,6 @@
             <ins class="alt" title="nlp 2.00">D</ins>
           </span>
         </span>
-        <span id="w_169_1" class="ocr_word" title="bbox 41 1787 73 1819">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_170" class="ocr_word" title="bbox 97 1765 266 1828" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">ρίφθω</ins>
@@ -926,18 +921,18 @@
             <ins class="alt" title="nlp 1.00">τῶν</ins>
           </span>
         </span>
-        <span id="w_179" class="ocr_word" title="bbox 1665 1781 1788 1829" lang="grc">
+        <span id="w_179_0" class="ocr_word" title="bbox 1665 1781 1788 1829">
           <span class="alternatives">
-            <ins title="nlp 2.00">χρει-</ins>
+            <ins class="alt" title="nlp 2.00">χρειωδῶν</ins>
+          </span>
+        </span>
+        <span id="w_179_1" class="ocr_word" title="bbox 1665 1781 1788 1829">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">20</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 101 1835 1788 1908">
-        <span id="w_181" class="ocr_word" title="bbox 101 1843 256 1891" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ωδῶν</ins>
-          </span>
-        </span>
         <span id="w_182" class="ocr_word" title="bbox 294 1845 442 1906" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εἶχον,</ins>
@@ -1153,7 +1148,7 @@
         </span>
         <span id="w_224_1" class="ocr_word" title="bbox 1581 2169 1784 2217">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">25</ins>
           </span>
         </span>
       </span>
@@ -1449,7 +1444,7 @@
         </span>
         <span id="w_284" class="ocr_word" title="bbox 726 2812 748 2850">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">1</ins>
+            <ins title="nlp 2.00">7</ins>
           </span>
         </span>
         <span id="w_285" class="ocr_word" title="bbox 770 2811 1012 2863" lang="grc">
