--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0275.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0275.html
@@ -532,16 +532,11 @@
         </span>
         <span id="w_103" class="ocr_word" title="bbox 1687 1141 1807 1209" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πόρ-</ins>
+            <ins title="nlp 2.00">πόρρωθεν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 119 1219 1809 1288">
-        <span id="w_104" class="ocr_word" title="bbox 119 1225 287 1284" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ρωθεν</ins>
-          </span>
-        </span>
         <span id="w_105" class="ocr_word" title="bbox 324 1238 446 1284" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">πρὸς</ins>
@@ -666,23 +661,18 @@
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_130" class="ocr_word" title="bbox 1676 1382 1807 1426" lang="grc">
+        <span id="w_130_0" class="ocr_word" title="bbox 1676 1382 1807 1426">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐλπι-</ins>
+            <ins class="alt" title="nlp 2.00">ἐλπιζόμενον</ins>
           </span>
         </span>
-        <span id="w_131" class="ocr_word" title="bbox 1833 1390 1872 1423">
+        <span id="w_130_1" class="ocr_word" title="bbox 1676 1382 1807 1426">
           <span class="alternatives">
-            <ins title="nlp 2.00">15</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 119 1451 1809 1521">
-        <span id="w_132" class="ocr_word" title="bbox 119 1452 323 1517" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ζόμενον</ins>
-          </span>
-        </span>
         <span id="w_133" class="ocr_word" title="bbox 358 1454 724 1521" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μισθοφορικὸν</ins>
@@ -908,7 +898,7 @@
         </span>
         <span id="w_177_1" class="ocr_word" title="bbox 1613 1760 1806 1829">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">20</ins>
           </span>
         </span>
       </span>
@@ -1353,7 +1343,7 @@
         </span>
         <span id="w_265_1" class="ocr_word" title="bbox 1678 2538 1810 2603">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">30</ins>
           </span>
         </span>
       </span>
@@ -1546,11 +1536,6 @@
             <ins class="alt" title="nlp 2.00">πης</ins>
           </span>
         </span>
-        <span id="w_306_1" class="ocr_word" title="bbox 342 2880 374 2906">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_307" class="ocr_word" title="bbox 466 2865 578 2906">
           <span class="alternatives">
             <ins title="nlp 2.00">item</ins>
@@ -1566,9 +1551,14 @@
             <ins title="nlp 2.00">ras</ins>
           </span>
         </span>
-        <span id="w_310" class="ocr_word" title="bbox 791 2877 836 2904">
+        <span id="w_310_0" class="ocr_word" title="bbox 791 2877 836 2904">
           <span class="alternatives">
-            <ins title="nlp 2.00">m</ins>
+            <ins class="alt" title="nlp 2.00">m</ins>
+          </span>
+        </span>
+        <span id="w_310_1" class="ocr_word" title="bbox 791 2877 836 2904">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">2</ins>
           </span>
         </span>
       </span>
