--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0277.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0277.html
@@ -648,7 +648,7 @@
         </span>
         <span id="w_126_1" class="ocr_word" title="bbox 1661 1353 1798 1417">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">15</ins>
           </span>
         </span>
       </span>
@@ -809,11 +809,6 @@
         <span id="w_158_0" class="ocr_word" title="bbox 58 1738 329 1803">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">Β</ins>
-          </span>
-        </span>
-        <span id="w_158_1" class="ocr_word" title="bbox 58 1738 329 1803">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_159" class="ocr_word" title="bbox 367 1739 545 1787" lang="grc">
@@ -1056,23 +1051,18 @@
             <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
-        <span id="w_206" class="ocr_word" title="bbox 1654 2127 1797 2189" lang="grc">
+        <span id="w_206_0" class="ocr_word" title="bbox 1654 2127 1797 2189">
           <span class="alternatives">
-            <ins title="nlp 2.00">βασι-</ins>
+            <ins class="alt" title="nlp 2.00">βασιλεὺς</ins>
           </span>
         </span>
-        <span id="w_207" class="ocr_word" title="bbox 1820 2149 1862 2181">
+        <span id="w_206_1" class="ocr_word" title="bbox 1654 2127 1797 2189">
           <span class="alternatives">
-            <ins title="nlp 2.00">25</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 112 2195 1796 2267">
-        <span id="w_208" class="ocr_word" title="bbox 112 2209 225 2263" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">λεὺς</ins>
-          </span>
-        </span>
         <span id="w_209" class="ocr_word" title="bbox 264 2201 413 2265" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀξίως</ins>
@@ -1113,11 +1103,6 @@
         <span id="w_216_0" class="ocr_word" title="bbox 36 2301 261 2348">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">163</ins>
-          </span>
-        </span>
-        <span id="w_216_1" class="ocr_word" title="bbox 36 2301 261 2348">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_217" class="ocr_word" title="bbox 337 2281 565 2347" lang="grc">
