--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0278.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0278.html
@@ -1088,9 +1088,9 @@
             <ins class="alt" title="nlp 1.00">ἀπόπλουν</ins>
           </span>
         </span>
-        <span id="w_213" class="ocr_word" title="bbox 1746 2074 1886 2119" lang="grc">
+        <span id="w_213_0" class="ocr_word" title="bbox 1746 2074 1886 2119">
           <span class="alternatives">
-            <ins title="nlp 2.00">ποιη-</ins>
+            <ins class="alt" title="nlp 2.00">ποιησάμενος</ins>
           </span>
         </span>
       </span>
@@ -1098,11 +1098,6 @@
         <span id="w_214" class="ocr_word" title="bbox 136 2147 180 2178" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">25</ins>
-          </span>
-        </span>
-        <span id="w_215" class="ocr_word" title="bbox 203 2129 265 2178" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">σάμενος</ins>
           </span>
         </span>
         <span id="w_216" class="ocr_word" title="bbox 460 2133 507 2191" lang="grc">
