--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0279.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0279.html
@@ -248,7 +248,7 @@
         </span>
         <span id="w_45_1" class="ocr_word" title="bbox 1625 604 1789 651">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">5</ins>
           </span>
         </span>
       </span>
@@ -488,7 +488,7 @@
         </span>
         <span id="w_93_1" class="ocr_word" title="bbox 1627 967 1789 1021">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">10</ins>
           </span>
         </span>
       </span>
@@ -928,7 +928,7 @@
         </span>
         <span id="w_181_1" class="ocr_word" title="bbox 1638 1764 1790 1811">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">20</ins>
           </span>
         </span>
       </span>
@@ -1158,7 +1158,7 @@
         </span>
         <span id="w_227_1" class="ocr_word" title="bbox 1634 2151 1789 2197">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">25</ins>
           </span>
         </span>
       </span>
@@ -1373,7 +1373,7 @@
         </span>
         <span id="w_269_1" class="ocr_word" title="bbox 1651 2539 1788 2585">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">30</ins>
           </span>
         </span>
       </span>
