--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0280.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0280.html
@@ -655,9 +655,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 145 1362 1945 1436">
-        <span id="w_128" class="ocr_word" title="bbox 145 1387 185 1419">
+        <span id="w_128_0" class="ocr_word" title="bbox 145 1387 185 1419">
           <span class="alternatives">
-            <ins title="nlp 2.00">10</ins>
+            <ins class="alt" title="nlp 2.00">15</ins>
+          </span>
+        </span>
+        <span id="w_128_1" class="ocr_word" title="bbox 145 1387 185 1419">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_129" class="ocr_word" title="bbox 210 1364 371 1432" lang="grc">
@@ -703,11 +708,6 @@
         <span id="w_137_0" class="ocr_word" title="bbox 1688 1362 1894 1436">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">ἀπεγράφετο.</ins>
-          </span>
-        </span>
-        <span id="w_137_1" class="ocr_word" title="bbox 1688 1362 1894 1436">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
