--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0281.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0281.html
@@ -258,7 +258,7 @@
         </span>
         <span id="w_47_1" class="ocr_word" title="bbox 1634 606 1792 653">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">5</ins>
           </span>
         </span>
       </span>
@@ -473,7 +473,7 @@
         </span>
         <span id="w_91_1" class="ocr_word" title="bbox 1671 977 1790 1040">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">10</ins>
           </span>
         </span>
       </span>
@@ -668,7 +668,7 @@
         </span>
         <span id="w_131_1" class="ocr_word" title="bbox 1604 1361 1792 1412">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">15</ins>
           </span>
         </span>
       </span>
@@ -1328,7 +1328,7 @@
         </span>
         <span id="w_260_1" class="ocr_word" title="bbox 1629 2520 1788 2588">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">30</ins>
           </span>
         </span>
       </span>
