--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0283.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0283.html
@@ -990,16 +990,11 @@
         </span>
         <span id="w_195" class="ocr_word" title="bbox 1701 1829 1820 1879" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐπα-</ins>
+            <ins title="nlp 2.00">ἐπαναστρέψας</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 130 1903 1822 1973">
-        <span id="w_196" class="ocr_word" title="bbox 130 1905 412 1973" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ναστρέψας</ins>
-          </span>
-        </span>
         <span id="w_197" class="ocr_word" title="bbox 440 1925 494 1956" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐν</ins>
