--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0289.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0289.html
@@ -194,11 +194,6 @@
             <ins class="alt" title="nlp 2.00">C</ins>
           </span>
         </span>
-        <span id="w_33_1" class="ocr_word" title="bbox 83 519 109 552">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_34" class="ocr_word" title="bbox 140 526 224 571" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῆς</ins>
@@ -234,9 +229,14 @@
             <ins class="alt" title="nlp 1.00">ἅπαντες</ins>
           </span>
         </span>
-        <span id="w_41" class="ocr_word" title="bbox 1563 514 1663 559" lang="grc">
+        <span id="w_41_0" class="ocr_word" title="bbox 1563 514 1663 559">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῶν</ins>
+            <ins class="alt" title="nlp 2.00">τῶν</ins>
+          </span>
+        </span>
+        <span id="w_41_1" class="ocr_word" title="bbox 1563 514 1663 559">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">Σκυθῶν</ins>
           </span>
         </span>
       </span>
