--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0290.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0290.html
@@ -501,12 +501,7 @@
         </span>
         <span id="w_97_0" class="ocr_word" title="bbox 822 1139 1152 1210">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">(Ξηρόγυφον</ins>
-          </span>
-        </span>
-        <span id="w_97_1" class="ocr_word" title="bbox 822 1139 1152 1210">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins class="alt" title="nlp 2.00">Ξηρόγυφον</ins>
           </span>
         </span>
         <span id="w_98" class="ocr_word" title="bbox 1177 1143 1351 1192" lang="grc">
